# noveldown

./: .flake8  .pre-commit-config.yaml  Claw.epub  README.md  pyproject.toml  test.py
noveldown/: __init__.py  api.py  cli.py  utils.py
noveldown/sources/: __init__.py  base_source.py  source_claw.py  source_pale.py  source_practical_guide_to_evil.py  source_wandering_inn.py
tests/: common.py  test_source_claw.py  test_source_pale.py  test_source_practical_guide_to_evil.py  test_source_wanderinginn.py
